<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IssueTrackingActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="403dp"
        android:layout_height="543dp"
        android:layout_marginTop="40dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/CreateTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/CreateTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="createTask"
        android:text="@string/create_task"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteTaskBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="deleteTaskButAction"
        android:text="@string/delete_task"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/CreateTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainRecyclerView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/modifyTaskBut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="modifyTaskAction"
        android:text="@string/modify_task"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/deleteTaskBut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>